force-app/main/default/objects/Batch_Config__mdt/Batch_Config__mdt.object-meta.xml
<CustomObject>
    <description>Typically batches needs certain configurations - like how much time window has to be processed, how old the records should be, fault tolerance and so on. This metadata can help with configuring such parameters for each batch.</description>
    <label>Batch Configuration</label>
    <pluralLabel>Batch Configurations</pluralLabel>
</CustomObject>