force-app/main/default/objects/Batch_Config__mdt/fields/Data_Freshness__c.field-meta.xml
<CustomField>
    <fullName>Data_Freshness__c</fullName>
    <description>How old the data needs to be to consider for processing. This field can be interpreted in multiple ways depending on what the batch does. For e.g., the cleanup batch will only consider the records older than this time for cleanup.</description>
    <inlineHelpText>How old the data needs to be to consider for processing. This field can be interpreted in multiple ways depending on what the batch does. For e.g., the cleanup batch will only consider the records older than this time for cleanup.</inlineHelpText>
    <label>Data Freshness</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>