force-app/main/default/objects/Batch_Config__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description about the flag for developers or administrators to understand the configuration values for each batch</description>
    <inlineHelpText>Description about the flag for developers or administrators to understand the configuration values for each batch</inlineHelpText>
    <label>Description</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>