force-app/main/default/objects/Batch_Config__mdt/fields/Notification_Address__c.field-meta.xml
<CustomField>
    <fullName>Notification_Address__c</fullName>
    <description>Email Address to send batch notifications after the batch execution is completed.</description>
    <inlineHelpText>Email Address to send batch notifications after the batch execution is completed.</inlineHelpText>
    <label>Notification Address</label>
    <type>TextArea</type>
</CustomField>