force-app/main/default/objects/Batch_Config__mdt/fields/Processing_Time_Range__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time_Range__c</fullName>
    <description>How much time window the batch will need to process</description>
    <inlineHelpText>How much time window the batch will need to process</inlineHelpText>
    <label>Processing Time Range</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>