force-app/main/default/objects/Batch_Config__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Number of records that needs to be passed into execute - for each transaction within a batch.</description>
    <inlineHelpText>Number of records that needs to be passed into execute - for each transaction within a batch.</inlineHelpText>
    <label>Scope</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>